--- a/public/html/login.html
+++ b/public/html/login.html
@@ -1,10 +1,10 @@
 
 <div class="center home">
 	<p>
-		Welcome to Outlines, a tool for writers. Organize your stories into parts, chapters, and events, and move plot points around with the click of a button. Planning your novel has never been easier!
+		PlotHound is a tool for writers to plan and organize their stories. Rearrange chapters and plot points with the click of a button.
 	</p>
 	<p>
-		Outlines is still in development, so your are highly encouraged to keep a backup copy of your work. You can easily do this by clicking "File" at the top of the screen, then "Save page as..."
+		PlotHound is still in development, so your are highly encouraged to keep a backup copy of your work. You can easily do this by clicking "File" at the top of the screen, then "Save page as..."
 	</p>
 	<p>
 		Also, make sure to click the "save" button to save your work! This will not happen automatically.
